# retinoto_py

./: .gitignore  .readthedocs.yaml  00_installation.ipynb  05_imagenet-bbox-dataset.ipynb  08_dataloaders.ipynb  10_inference.ipynb  11_faster_inference.ipynb  12_benchmarking_inference_loader.ipynb  12_rotation_attack.ipynb  13_benchmarking_inference_models.ipynb  14_benchmarking_inference_convnext_models.ipynb  16_rotation_attack.ipynb  17_rotation_attack.ipynb  20_transfer-learning.ipynb  23_benchmarking_inference_retrained-models.ipynb  31_transfer-learning-resnet101-fovea.ipynb  32_transfer-learning-convnext-fovea.ipynb  32_transfer-learning-fovea.ipynb  32_transfer-learning-resnet101-fovea.ipynb  33_benchmarking_inference_models.ipynb  33_transfer-learning-convnext-fovea.ipynb  33_transfer-learning-fovea.ipynb  34_optimize-bbox.ipynb  34_optimize-with-optuna.ipynb  37_rotation_attack-after-retraining.ipynb  41_multiple_likelihood_map.ipynb  42_statistics-of-likelihood_maps.ipynb  42_statistics-of-likelihood_maps_another-subset.ipynb  42_statistics-of-likelihood_maps_max.ipynb  43_statistics-of-likelihood_maps_controls.ipynb  44_optimise_focus.ipynb  45_transfer_learning_focus.ipynb  49_pareidolia_map.ipynb  99_run-all-the-stack.ipynb  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  (+2 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: 00_installation.ipynb  index.md  installation.md  pelicanconf.py  usage.md
src/retinoto_py/: __init__.py  cli.py  params.py  retinoto_py.py  (+2 more)
tests/: __init__.py  test_retinoto_py.py
