[project]
name = "retinoto_py"
version = "20251122"
description = "Giving a biological eye to deep learning convolutional networks."
readme = "README.md"
authors = [
  {name = "Laurent U Perrinet", email = "laurent.perrinet@cnrs.fr"}
]
maintainers = [
  {name = "Laurent U Perrinet", email = "laurent.perrinet@cnrs.fr"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/laurentperrinet/retinoto_py/issues"
changelog = "https://github.com/laurentperrinet/retinoto_py/blob/master/changelog.md"
homepage = "https://github.com/laurentperrinet/retinoto_py"

[project.scripts]
retinoto_py = "retinoto_py.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
